# gemtcl

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.in  SConstruct  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.in  gemtcl.nsi.in  gemtcl.rc.in  libtool  version.h
doc/: SConscript  manual.txt  tutorial.txt
examples/: apples.glade  apples.gtf  b.glade  glade-buttons.glade  glade-demo.glade  glade-demo.gtf  oranges.glade  oranges.gtf
lib/: Makefile.am
lib-win32/: init.tcl  tclConfig.sh  xmlrpc.tcl
lib-win32/dde1.3/: tcldde13.dll.debug
lib-win32/reg1.2/: tclreg12.dll.debug
server-examples/: SConscript  example-server.c  mic-win.tcl  mic.glade  mic.gtf  microscope-creatures.ps  microscope-server.c  xmlrpc-server.c
src/: Makefile  Makefile.am  Makefile.in  SConscript  gem-button-box-button-bless-editor-private.h  gem-button-box-button-bless-editor.gob  gem-button-box-button-bless.cc  gem-button-box-button-bless.h  gem-button-box-button-editor-private.h  gem-button-box-button-editor.cc  gem-button-box-button-editor.h  gem-button-box-button-private.h  gem-button-box-button.cc  gem-button-box-button.h  gem-button-box-editor-private.h  gem-button-box-editor.gob  gem-button-box-private.h  gem-button-box.gob  gem.h  gemtcl-remote.cc  gemtcl.cc  gnet_xmlrpc.h  xmlrpc-client.c  xmlrpc-server.c
src/plis/: Makefile  Makefile.am  Makefile.in  SConscript  plis.cc  plis_regexp.h
src/xnm/: Makefile  Makefile.am  Makefile.in  SConscript  mini-test.c  test-libxnm.c  xnm-parse-and-query.c  xnm-parser.y  xnm-retrieve.c  xnm-struct.c  xnm.h  xnm_private.h
