SUBDIRS = src doc server-examples 

EXTRA_DIST = lib/xmlrpc.tcl \
	     examples/smiley.svg \
             examples/glade-buttons.glade \
             examples/glade-demo.glade \
	     examples/glade-demo.gtf \
	     examples/therm50.svg \
	     examples/therm.svg \
	     misc/gemtcl-logo-150.png \
             misc/gemtcl-logo-64.png \
             misc/gemtcl-logo.ico \
             misc/gemtcl-logo.svg
